--- a/Ekram_LS_DS_214_assignment.ipynb
+++ b/Ekram_LS_DS_214_assignment.ipynb
@@ -208,16 +208,16 @@
       "metadata": {
         "id": "0K5BnMmKdacb",
         "colab_type": "code",
-        "outputId": "9938de87-3e17-45df-a477-46a82b4dbfc2",
+        "outputId": "dceb2dea-e0e4-4993-9e31-3d96e4751da6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 316
+          "height": 232
         }
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>California</td>\n",
-              "      <td>2016-01-18</td>\n",
+              "      <td>1/18/2016</td>\n",
               "      <td>3.5</td>\n",
               "      <td>4.2</td>\n",
               "      <td>NaN</td>\n",
@@ -368,7 +368,7 @@
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>California</td>\n",
-              "      <td>2016-01-24</td>\n",
+              "      <td>1/24/2016</td>\n",
               "      <td>3.5</td>\n",
               "      <td>3.3</td>\n",
               "      <td>NaN</td>\n",
@@ -430,7 +430,7 @@
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>Carnitas</td>\n",
-              "      <td>2016-01-24</td>\n",
+              "      <td>1/24/2016</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -492,7 +492,7 @@
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>Asada</td>\n",
-              "      <td>2016-01-24</td>\n",
+              "      <td>1/24/2016</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -554,7 +554,7 @@
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>California</td>\n",
-              "      <td>2016-01-27</td>\n",
+              "      <td>1/27/2016</td>\n",
               "      <td>4.0</td>\n",
               "      <td>3.8</td>\n",
               "      <td>x</td>\n",
@@ -619,11 +619,11 @@
             ],
             "text/plain": [
               "      Burrito       Date  Yelp  Google Chips  ...  Sushi  Avocado  Corn  Zucchini  Great\n",
-              "0  California 2016-01-18   3.5     4.2   NaN  ...    NaN      NaN   NaN       NaN  False\n",
-              "1  California 2016-01-24   3.5     3.3   NaN  ...    NaN      NaN   NaN       NaN  False\n",
-              "2    Carnitas 2016-01-24   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN  False\n",
-              "3       Asada 2016-01-24   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN  False\n",
-              "4  California 2016-01-27   4.0     3.8     x  ...    NaN      NaN   NaN       NaN   True\n",
+              "0  California  1/18/2016   3.5     4.2   NaN  ...    NaN      NaN   NaN       NaN  False\n",
+              "1  California  1/24/2016   3.5     3.3   NaN  ...    NaN      NaN   NaN       NaN  False\n",
+              "2    Carnitas  1/24/2016   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN  False\n",
+              "3       Asada  1/24/2016   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN  False\n",
+              "4  California  1/27/2016   4.0     3.8     x  ...    NaN      NaN   NaN       NaN   True\n",
               "\n",
               "[5 rows x 59 columns]"
             ]
@@ -631,7 +631,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 14
         }
       ]
     },
@@ -705,7 +705,7 @@
       "metadata": {
         "id": "yVtqVyj-d4tX",
         "colab_type": "code",
-        "outputId": "fd3ebe95-58c9-4d59-89da-df98945796c6",
+        "outputId": "d7c686b9-5e9f-48d2-97de-c04afea2c23c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
@@ -717,7 +717,7 @@
         "y_train = train[target]\n",
         "y_train.value_counts(normalize = True)"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +731,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 19
         }
       ]
     },
@@ -766,7 +766,7 @@
       "metadata": {
         "id": "6x8Grh2HooGX",
         "colab_type": "code",
-        "outputId": "c7ab7c80-2a91-4738-d360-d9f23e72ef28",
+        "outputId": "93b661ce-a72e-4fb8-a584-36ff43c5a341",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -778,7 +778,7 @@
         "\n",
         "accuracy_score(y_train, y_pred)"
       ],
-      "execution_count": 0,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -790,7 +790,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 22
         }
       ]
     },
@@ -799,7 +799,7 @@
       "metadata": {
         "id": "uWPFQL3UouJo",
         "colab_type": "code",
-        "outputId": "160b6ff0-c445-4d6b-aa9a-d9313cca7ce4",
+        "outputId": "171e692f-b636-40e5-c4dc-a267e18d3135",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -811,7 +811,7 @@
         "y_pred = [majority_class] * len(y_val)\n",
         "accuracy_score(y_val, y_pred)"
       ],
-      "execution_count": 0,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +823,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 23
         }
       ]
     },
@@ -842,7 +842,7 @@
       "metadata": {
         "id": "a0FN9J1sotTg",
         "colab_type": "code",
-        "outputId": "b7b92e12-11b4-4693-ba0a-ceb5675319bc",
+        "outputId": "c9632462-ca11-4ff3-c7d9-4e881604ad49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -851,7 +851,7 @@
       "source": [
         "train.describe(exclude = 'number').T.sort_values(by = 'unique')"
       ],
-      "execution_count": 0,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1295,7 +1295,129 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iy_4Yoq09g3y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "e0d195cd-5027-40de-f142-d5ea26ebf4ad"
+      },
+      "source": [
+        "train.isnull().sum()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Burrito             0\n",
+              "Date                0\n",
+              "Yelp              227\n",
+              "Google            227\n",
+              "Chips             276\n",
+              "Cost                6\n",
+              "Hunger              1\n",
+              "Mass (g)          298\n",
+              "Density (g/mL)    298\n",
+              "Length            123\n",
+              "Circum            124\n",
+              "Volume            124\n",
+              "Tortilla            0\n",
+              "Temp               15\n",
+              "Meat               10\n",
+              "Fillings            1\n",
+              "Meat:filling        6\n",
+              "Uniformity          2\n",
+              "Salsa              20\n",
+              "Synergy             2\n",
+              "Wrap                2\n",
+              "Unreliable        271\n",
+              "NonSD             293\n",
+              "Beef              130\n",
+              "Pico              155\n",
+              "Guac              159\n",
+              "Cheese            149\n",
+              "Fries             179\n",
+              "Sour cream        213\n",
+              "Pork              255\n",
+              "Chicken           278\n",
+              "Shrimp            278\n",
+              "Fish              293\n",
+              "Rice              265\n",
+              "Beans             266\n",
+              "Lettuce           287\n",
+              "Tomato            291\n",
+              "Bell peper        291\n",
+              "Carrots           297\n",
+              "Cabbage           291\n",
+              "Sauce             261\n",
+              "Salsa.1           292\n",
+              "Cilantro          283\n",
+              "Onion             281\n",
+              "Taquito           294\n",
+              "Pineapple         291\n",
+              "Ham               297\n",
+              "Chile relleno     294\n",
+              "Nopales           294\n",
+              "Lobster           297\n",
+              "Queso             298\n",
+              "Egg               294\n",
+              "Mushroom          295\n",
+              "Bacon             295\n",
+              "Sushi             296\n",
+              "Avocado           285\n",
+              "Corn              296\n",
+              "Zucchini          297\n",
+              "Great               0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pXAgOJ37-tb9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "5abb0439-4fb2-4d5e-e8f1-8eaa4bf8f759"
+      },
+      "source": [
+        "my_features = train.columns[train.isnull().sum() < 20]\n",
+        "my_features"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Burrito', 'Date', 'Cost', 'Hunger', 'Tortilla', 'Temp', 'Meat',\n",
+              "       'Fillings', 'Meat:filling', 'Uniformity', 'Synergy', 'Wrap', 'Great'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
         }
       ]
     },
@@ -1304,16 +1426,36 @@
       "metadata": {
         "id": "CmliBwzDl76g",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "1a9857a9-7627-4d97-ab41-ff03711e4002"
       },
       "source": [
         "# Date has high cordinality\n",
         "target = 'Great'\n",
         "high_cordinality = ['Date']\n",
-        "features = train.columns.drop([target] + high_cordinality)"
+        "features = my_features.drop([target] + high_cordinality)\n",
+        "features"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Burrito', 'Cost', 'Hunger', 'Tortilla', 'Temp', 'Meat', 'Fillings',\n",
+              "       'Meat:filling', 'Uniformity', 'Synergy', 'Wrap'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1403,7 +1545,7 @@
       "metadata": {
         "id": "OFG1wSfCy1ve",
         "colab_type": "code",
-        "outputId": "1450194d-400b-4733-e5a6-8fa9eedbdd10",
+        "outputId": "f5d3d3d4-cec5-413b-dc1a-73b4ab3b4217",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
@@ -1417,7 +1559,7 @@
         "model.fit(X_val_scaled, y_val)\n",
         "model.fit(X_test_scaled, y_test)"
       ],
-      "execution_count": 0,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1433,7 +1575,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 57
         }
       ]
     },
@@ -1450,50 +1592,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wxX0p51veDzG",
+        "id": "h3y0QFHuAvni",
         "colab_type": "code",
-        "outputId": "29c9b675-0bc5-443e-dabb-46da3fa98653",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
-        "print('Validation Accuracy', model.score(X_train_scaled, y_train))"
+        "y_pred = model.predict(X_val_scaled)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Validation Accuracy 0.7785234899328859\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GNyuqW0Rzw4u",
+        "id": "P4PYfNXwCIn5",
         "colab_type": "code",
-        "outputId": "7b891a39-0401-456e-d9a1-b5e258117857",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "f2819576-3f85-4392-b917-02aeaa624b4f"
       },
       "source": [
-        "print('Validation Accuracy', model.score(X_val_scaled, y_val))"
+        "accuracy_score(y_val,y_pred)"
       ],
-      "execution_count": 0,
+      "execution_count": 62,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Validation Accuracy 0.6941176470588235\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7764705882352941"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
         }
       ]
     },
@@ -1510,32 +1645,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "33ZXY2Bvex8E",
+        "id": "EuaWWPgtCxwn",
         "colab_type": "code",
-        "outputId": "c19304dd-4918-49ec-d78d-68ff05980ea5",
+        "colab": {}
+      },
+      "source": [
+        "y_pred2 = model.predict(X_test_scaled)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HJgGryd90NXi",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "338e982b-72b2-4800-b473-a7e421f562d8"
       },
       "source": [
-        "print('Test Accuracy', model.score(X_test_scaled, y_test))"
+        "accuracy_score(y_test,y_pred2)"
       ],
-      "execution_count": 0,
+      "execution_count": 66,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Test Accuracy 1.0\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9736842105263158"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 66
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HJgGryd90NXi",
+        "id": "Vz_tL5_mCqC2",
         "colab_type": "code",
         "colab": {}
       },
