--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +174,9 @@
        "      <th>garden_patio</th>\n",
        "      <th>wheelchair_access</th>\n",
        "      <th>common_outdoor_space</th>\n",
+       "      <th>description_length</th>\n",
+       "      <th>total_perks</th>\n",
+       "      <th>amenities</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -213,6 +216,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>588</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -250,6 +256,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -287,159 +296,244 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2016-04-18 02:22:02</td>\n",
-       "      <td>Building Amenities - Garage - Garden - fitness...</td>\n",
-       "      <td>East 49th Street</td>\n",
-       "      <td>40.7539</td>\n",
-       "      <td>-73.9677</td>\n",
-       "      <td>3275</td>\n",
-       "      <td>333 East 49th Street</td>\n",
-       "      <td>low</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2016-04-28 01:32:41</td>\n",
-       "      <td>Beautifully renovated 3 bedroom flex 4 bedroom...</td>\n",
-       "      <td>West 143rd Street</td>\n",
-       "      <td>40.8241</td>\n",
-       "      <td>-73.9493</td>\n",
-       "      <td>3350</td>\n",
-       "      <td>500 West 143rd Street</td>\n",
-       "      <td>low</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>691</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   bathrooms  bedrooms              created  \\\n",
-       "0        1.5         3  2016-06-24 07:54:24   \n",
-       "1        1.0         2  2016-06-12 12:19:27   \n",
-       "2        1.0         1  2016-04-17 03:26:41   \n",
-       "3        1.0         1  2016-04-18 02:22:02   \n",
-       "4        1.0         4  2016-04-28 01:32:41   \n",
+       "   bathrooms  bedrooms             created  \\\n",
+       "0        1.5         3 2016-06-24 07:54:24   \n",
+       "1        1.0         2 2016-06-12 12:19:27   \n",
+       "2        1.0         1 2016-04-17 03:26:41   \n",
        "\n",
        "                                         description      display_address  \\\n",
        "0  A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...  Metropolitan Avenue   \n",
        "1                                                         Columbus Avenue   \n",
        "2  Top Top West Village location, beautiful Pre-w...          W 13 Street   \n",
-       "3  Building Amenities - Garage - Garden - fitness...     East 49th Street   \n",
-       "4  Beautifully renovated 3 bedroom flex 4 bedroom...    West 143rd Street   \n",
        "\n",
        "   latitude  longitude  price           street_address interest_level  \\\n",
        "0   40.7145   -73.9425   3000  792 Metropolitan Avenue         medium   \n",
        "1   40.7947   -73.9667   5465      808 Columbus Avenue            low   \n",
        "2   40.7388   -74.0018   2850          241 W 13 Street           high   \n",
-       "3   40.7539   -73.9677   3275     333 East 49th Street            low   \n",
-       "4   40.8241   -73.9493   3350    500 West 143rd Street            low   \n",
        "\n",
        "   elevator  cats_allowed  hardwood_floors  dogs_allowed  doorman  dishwasher  \\\n",
        "0         0             0                0             0        0           0   \n",
        "1         1             1                0             1        1           0   \n",
        "2         0             0                1             0        0           1   \n",
-       "3         0             0                1             0        0           0   \n",
-       "4         0             0                0             0        0           0   \n",
        "\n",
        "   no_fee  laundry_in_building  fitness_center  pre-war  laundry_in_unit  \\\n",
        "0       0                    0               0        0                0   \n",
        "1       0                    0               1        0                0   \n",
        "2       0                    1               0        0                0   \n",
-       "3       1                    0               0        0                0   \n",
-       "4       0                    0               0        1                0   \n",
        "\n",
        "   roof_deck  outdoor_space  dining_room  high_speed_internet  balcony  \\\n",
        "0          0              0            0                    0        0   \n",
        "1          0              0            0                    0        0   \n",
        "2          0              0            0                    0        0   \n",
-       "3          0              0            0                    0        0   \n",
-       "4          0              0            0                    0        0   \n",
        "\n",
        "   swimming_pool  new_construction  terrace  exclusive  loft  garden_patio  \\\n",
        "0              0                 0        0          0     0             0   \n",
        "1              0                 0        0          0     0             0   \n",
        "2              0                 0        0          0     0             0   \n",
-       "3              0                 0        0          0     0             0   \n",
-       "4              0                 0        0          0     0             0   \n",
        "\n",
-       "   wheelchair_access  common_outdoor_space  \n",
-       "0                  0                     0  \n",
-       "1                  0                     0  \n",
-       "2                  0                     0  \n",
-       "3                  0                     0  \n",
-       "4                  0                     0  "
+       "   wheelchair_access  common_outdoor_space  description_length  total_perks  \\\n",
+       "0                  0                     0                 588            0   \n",
+       "1                  0                     0                   8            4   \n",
+       "2                  0                     0                 691            3   \n",
+       "\n",
+       "   amenities  \n",
+       "0          0  \n",
+       "1          4  \n",
+       "2          3  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# set df to read all columns and inspect head \n",
+    "\n",
     "pd.set_option('display.max_columns', None)\n",
-    "df.head()"
+    "df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# convert to datetime \n",
+    "\n",
+    "df['created'] = df['created'].apply(np.datetime64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create description length and amenities\n",
+    "\n",
+    "df['description_length'] = df['description'].apply(lambda s: len(s) if isinstance(s, str) else 0)\n",
+    "df['amenities'] = df['cats_allowed'] + df['hardwood_floors'] + df['dogs_allowed'] + df['doorman'] + df['dishwasher'] + df['laundry_in_building'] + df['fitness_center'] +  df['laundry_in_unit'] + df['roof_deck'] + df['outdoor_space'] + df['dining_room'] + df['high_speed_internet'] + df['balcony'] + df['swimming_pool'] + df['terrace'] + df['loft'] + df['garden_patio'] + df['wheelchair_access'] + df['common_outdoor_space']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create test and train data \n",
+    "\n",
+    "train_date1 = np.datetime64(\"2016-03-01\")\n",
+    "train_date2 = np.datetime64(\"2016-05-01\")\n",
+    "\n",
+    "test_date1 = np.datetime64(\"2016-05-01\")\n",
+    "test_date2 = np.datetime64(\"2016-06-01\")\n",
+    "\n",
+    "train = df[(train_date1 <= df[\"created\"]) & (df[\"created\"] < train_date2)]\n",
+    "test = df[(test_date1 <= df[\"created\"]) & (df[\"created\"] < test_date2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1150.235158544352"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# imports \n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "\n",
+    "# create features and targets \n",
+    "\n",
+    "features = [\"description_length\", \"amenities\"]\n",
+    "target = \"price\"\n",
+    "\n",
+    "# create model and fit model based on features and targets \n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(train[features], train[target])\n",
+    "\n",
+    "# mae\n",
+    "\n",
+    "mean_absolute_error(model.predict(test[features]), test[target])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coef: [  0.22474988 170.44238904], intercepts: 2807.9134712092387\n"
+     ]
+    }
+   ],
+   "source": [
+    "# model's coefficients and intercept \n",
+    "\n",
+    "coef = model.coef_\n",
+    "intercept = model.intercept_\n",
+    "\n",
+    "print(f\"coef: {coef}, intercepts: {intercept}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Metrics for test data:\n",
+      "    MAE: 1150.235158544352\n",
+      "    R2: -9.436413980232002\n",
+      "    RMSE: 1707.6233776244271\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# metrics for test data\n",
+    "\n",
+    "predict = model.predict(test[features])\n",
+    "actual = test[target]\n",
+    "\n",
+    "mae = mean_absolute_error(predict, actual)\n",
+    "R2 = r2_score(predict, actual)\n",
+    "RMSE = mean_squared_error(predict, actual)**0.5\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "    Metrics for test data:\n",
+    "    MAE: {mae}\n",
+    "    R2: {R2}\n",
+    "    RMSE: {RMSE}\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Metrics for the train data:\n",
+      "    MAE: 1111.834387754279\n",
+      "    R2: -8.878323198547946\n",
+      "    RMSE: 1645.9371204245085\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# metrics for train data \n",
+    "\n",
+    "predict = model.predict(train[features])\n",
+    "actual = train[target]\n",
+    "\n",
+    "mae = mean_absolute_error(predict, actual)\n",
+    "R2 = r2_score(predict, actual)\n",
+    "RMSE = mean_squared_error(predict, actual)**0.5\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "    Metrics for the train data:\n",
+    "    MAE: {mae}\n",
+    "    R2: {R2}\n",
+    "    RMSE: {RMSE}\n",
+    "\"\"\")"
+   ]
   }
  ],
  "metadata": {
