--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -834,37 +834,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9rApJGYblr5N",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "cc5405c8-9aa8-4770-93f2-0a69862de03a"
-      },
-      "source": [
-        "model_2=LinearRegression(fit_intercept=False)\n",
-        "model_2"
-      ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=False, n_jobs=None, normalize=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "EotbNPtE8kHT",
         "colab_type": "code",
         "colab": {}
@@ -1104,6 +1073,60 @@
       "cell_type": "code",
       "metadata": {
         "id": "55_Gqlq0Fd7Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def prediction(amount_of_bedrooms):\n",
+        "  from sklearn.linear_model import LinearRegression\n",
+        "  model=LinearRegression()\n",
+        "  features=['bedrooms']\n",
+        "  target='price'\n",
+        "  x_train=df[features]\n",
+        "  y_train=df[target]\n",
+        "  model.fit(x_train.values,y_train.values)\n",
+        "  x_test=[[amount_of_bedrooms]]\n",
+        "  y_pred=model.predict(x_test)\n",
+        "  return y_pred\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "womwOR7MPFgV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4ae4942a-67fa-4435-a161-2661ec808c0a"
+      },
+      "source": [
+        "# Check if it works\n",
+        "prediction(3)"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4827.73665176])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PsWgV_lGPH0Q",
         "colab_type": "code",
         "colab": {}
       },
