--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -647,10 +647,75 @@
       },
       "source": [
         "import numpy as np\n",
-        "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\\"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aEJSQWIwM8Qb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "eba9440b-233b-468a-f5b5-771c60b28526"
+      },
+      "source": [
+        "# Testing time\n",
+        "y_pred_train = model.predict(X_train)\n",
+        "print('training model')\n",
+        "print('root mean suqared error:', np.sqrt(mean_squared_error(y_pred_train, y_train)))\n",
+        "print('mean absolute error:', mean_absolute_error(y_pred_train, y_train))\n",
+        "print('R^2 score:', r2_score(y_pred_train, y_train))"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "training model\n",
+            "root mean suqared error: 1673.5338828570452\n",
+            "mean absolute error: 1122.7001186859166\n",
+            "R^2 score: -8.203417859315383\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_HIokKPKNazn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "54040181-56ef-40cb-e8db-4f051985b44d"
+      },
+      "source": [
+        "y_pred = model.predict(X_test)\n",
+        "print('testing model')\n",
+        "print('root mean suqared error:', np.sqrt(mean_squared_error(y_pred, y_test)))\n",
+        "print('mean absolute error:', mean_absolute_error(y_pred, y_test))\n",
+        "print('R^2 score:', r2_score(y_pred, y_test))"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "testing model\n",
+            "root mean suqared error: 1672.4011049346266\n",
+            "mean absolute error: 1118.847218275125\n",
+            "R^2 score: -8.109827638124546\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
